# ray-tracer

./: .gitignore  CMakeLists.txt  README.md
src/: raytracer.cpp
src/core/: buffered_image.h  color.h  ray.h  utilities.h  world.cpp  world.h
src/core/BRDFs/: BRDF.h  lambertian.h  perfect_specular.h
src/core/cameras/: camera.cpp  camera.h  pinhole.cpp  pinhole.h  thinlens.cpp  thinlens.h
src/core/lights/: area_light.cpp  area_light.h  directional.cpp  directional.h  light.h  point_light.cpp  point_light.h
src/core/materials/: emissive.h  material.h  materials.h  matte.h  reflective.h  transparent.h
src/core/objects/: aabb.h  bvh.h  geometric_object.h  hit_info.h  hittable_list.cpp  hittable_list.h  objects.h  plane.cpp  plane.h  sphere.cpp  sphere.h
src/core/objects/meshes/: mesh.cpp  mesh.h  mesh_triangle.cpp  mesh_triangle.h
src/core/objects/primitives/: rectangle.cpp  rectangle.h  smooth_triangle.cpp  smooth_triangle.h  sphere.cpp  sphere.h  triangle.cpp  triangle.h
src/core/samplers/: jittered.cpp  jittered.h  multijittered.cpp  multijittered.h  pure_random.cpp  sampler.cpp  sampler.h
src/core/textures/: constant_texture.h  image_texture.h  texture.h
src/core/textures/mappings/: planal_mapping.h  spherical_mapping.h  texture_mapping2D.h  uv_mapping.h
src/core/tracers/: direct_lighting_tracer.cpp  direct_lighting_tracer.h  multijittered.cpp  path_tracer.cpp  path_tracer.h  preview_tracer.cpp  preview_tracer.h  pure_random.h  ray_caster.cpp  ray_caster.h  ray_tracer.cpp  ray_tracer.h  sampler.cpp  tracer.h
src/gui/: console.cpp  console.h  gui.cpp  gui.h  renderview.cpp  renderview.h
src/math/: interval.cpp  interval.h  maths.h  transform.h  vector2.h  vector3.h
src/wrappers/: clock_util.h  colors.cpp  obj_loader.cpp  obj_loader.h
